--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Sample from "../components/Sample.astro";
 import Layout from "../layouts/Layout.astro";
 import BarChart from "../components/BarChart.tsx";
-import MoviewFlowers from "../components/MovieFlowers";
+import MoviewFlowers from "../components/MovieFlowers/index.tsx";
 ---
 
 <Layout>
